kubernetes/infrastructure/monitoring/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: gatus
    app.kubernetes.io/part-of: monitoring
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.223
  selector:
    app.kubernetes.io/name: gatus
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
